# MT5-Trading-Bot

botEma/: .env.example  .gitignore  DISTINCTIONS_BACKTEST_PROD_ANALYSE.md  DISTINCTIONS_FINALES.md  Readme.md  VERIF_FINALE_BACKTEST_PROD.md  backtest_csv.py  backtest_engine.py  backtest_optimizer.py  backtest_optimizer_r3.py  backtest_optimizer_r4.py  backtest_optimizer_r5.py  backtest_optimizer_r6.py  backtest_optimizer_wr.py  check_bot_safety.py  check_mt5_setup.py  config.example.py  diagnose_trade_conditions.py  ema_mt5_bot.py  export_mt5_data.py  failed_trades_log_ftmo.json  failed_trades_log_vtmarkets.json  list_symbols.py  notifier.py  optimizer.py  optimizer_r2.py  preferred_symbol_by_day.json  run_bot.py  strategy_core.py  strategy_pinescript.pine  validate_v2_safe.py  verify_bot_alignment.py  verify_prod_flow.py  verify_trade_conditions.py
botEma/backtest/: config.example.py  diagnose_us100.py  diagnose_us100_complete.py  download_historical_data.py  download_mt5_max_data.py  download_mt5_max_data_v2.py  ema_mt5_bot_backtest.py  run_backtest.py  run_backtest_h1.py  run_backtest_last24h.py  test_us100_stop_loss.py  us100_by_day_data.json  us30_by_day_data.json  us500_by_day_data.json
botEma/best_version/: optimizer_results.csv  params.txt  r2_best_trades.csv  r2_params.txt  v2_safe_trades.csv  v2_safe_validated_trades.csv  v2_safe_validation.txt
botEma/botOFI/: Cargo.toml  README.md  bridge.py  config_ofi.json  fix_src_main.sh  requirements.txt
botEma/botOFI/src/: main.rs
botEma/data/: DJ30__H1.csv  DJ30__M5.csv  NAS100__H1.csv  NAS100__M5.csv  (+7 more)
