[package]
name = "ofi-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nas_engine"
path = "src/nas_engine.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.4"
chrono = "0.4"
chrono-tz = "0.9"
